<resources>
    <string name="app_name">CRM</string>

    <!--Roles-->
    <string name="cashier">Cashier</string>
    <string name="manager">Manager</string>
    <string name="admin">Administrator of net</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">This login address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="non_specified_login">Login is non-specified</string>
    <string name="non_specified_password">Password is non-specified</string>

    <!--Navigation containerView staff strings-->
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Titles-->
    <string name="title_honor_board">Honor board</string>
    <string name="title_chat">Chat</string>
    <string name="title_sales">Sales</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_reports">Reports</string>
    <string name="title_goods_and_shops">Goods and shops</string>
    <string name="title_goods">Goods</string>
    <string name="title_shops">Shops</string>
    <string name="title_dialogs">Dialogs</string>

    <string name="offered_sales_title">Offered</string>
    <string name="approved_sales_title">Approved</string>

    <!--Accounts labels-->
    <string name="company_label">Shop network</string>
    <string name="store_label">Shop</string>
    <string name="address_label">Address</string>
    <string name="email_label">Email</string>
    <string name="password_label">Пароль</string>
    <string name="name_label">Имя</string>
    <string name="surname_label">Фамилия</string>
    <string name="job_label">Статус</string>

    <string name="button_main_label">Главная</string>
    <string name="sale_for_one_label">На 1 товар</string>
    <string name="sale_for_all_label">На всю покупку</string>
    <string name="sale_for_percent_label">Проценты</string>
    <string name="sale_for_amount_label">Количетсвенно</string>
    <string name="sale_amout_label">руб.</string>
    <string name="sale_percent_label">%</string>
    <string name="from_label">From</string>
    <string name="to_label">to</string>
    <string name="offer_label">Предложить</string>
    <string name="admin_fio_label">Administrator name</string>
    <string name="title_label">Name</string>

    <string name="username_label">Login</string>
    <string name="review_hint">Enter review</string>
    <string name="review_send">Send</string>
    <string name="approve_label">Approved</string>
    <string name="min_max_error">Введите значение от 0 до 100</string>
    <string name="date_error">Введите верные даты</string>


    <!--Commons-->
    <string name="loading_label">Loading</string>
    <string name="delete_label">Delete</string>
    <string name="edit_label">Edit</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="empty_error_text">Specify this field</string>
    <string name="exit_label">Exit</string>

    <!--Good edit labels-->
    <string name="change_good_label">Change good</string>
    <string name="good_name">Name</string>
    <string name="good_price">Price</string>
    <string name="good_kind">Kind</string>
    <string name="good_sizes">Sizes</string>
    <string name="block">Block</string>

    <!--Reports labels-->
    <string name="show_report">Show</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="choose_report_interval">Choose interval</string>


</resources>
