<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_honor"
            android:icon="@drawable/ic_board"
            android:title="@string/title_honor_board" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/title_chat" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/title_sales" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/title_accounts" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/title_reports" />
        <item
            android:id="@+id/nav_goods_and_shops"
            android:icon="@drawable/ic_goods_and_shops"
            android:title="@string/title_goods_and_shops" />
    </group>

    <item
        android:id="@+id/exit"
        android:title="@string/exit_label"
        android:icon="@drawable/ic_exit"
        />

</menu>
